data/derived/comb/progs/unify/prog3244.ml.out
Characters 86-90:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> ('a -> 'b) -> 'b
       The type variable 'a occurs inside ('a -> 'b) -> 'b
